k8s/r2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: r2-service
spec:
  selector:
    run: r2
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
